--- a/Assets/Plugins/GameBaseTool/package.json
+++ b/Assets/Plugins/GameBaseTool/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "com.huyitong.gamebasetool",
+  "name": "com.yitong.gamebasetool",
   "version": "1.1.1",
-  "displayName": "GameBaseTools",
-  "description": "game base tools",
+  "displayName": "Game Base Tool",
+  "description": "game base tool",
   "unity": "2022.3",
   "author": {
-    "name": "Hu Yitong",
+    "name": "YiTong Hu",
     "email": "cqu.hubinbin@gmail.com",
     "url": "https://github.com/YiTongHu-SC"
   },
